--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_write">WriteActivity</string>
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
