--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="title_activity_detail">DetailActivity</string>
 
     <!-- filter -->
-    <string name="filter_age_n_count">%1$s, %2$d명</string>
+    <string name="filter_age_n_count">%1$s, %2$s</string>
     <string name="filter_ssom_title">쏨 탐색기</string>
     <string name="filter_how_old_do_you_like">몇 살이 좋아?</string>
     <string name="filter_how_many_do_you_like">몇 명이 좋아?</string>
@@ -41,5 +41,11 @@
 
     <!-- post list item -->
     <string name="post_title">%1$s %2$d명 있어요.</string>
+
+    <!-- detail view -->
+    <string name="detail_cancel">닫기</string>
+    <string name="detail_apply">쏨 타기</string>
+    <string name="detail_age_people">%1$s, %2$d명이에요.</string>
+    <string name="detail_distance">나와의 거리 %1$s</string>
 
 </resources>
