--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">SsomClient</string>
+    <string name="project_number">189266416861</string>
 
     <string name="title_section1">내 정보</string>
     <string name="title_section2">아이템 상점</string>
@@ -8,16 +9,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_example">Example action</string>
-
+    <!-- setting -->
     <string name="action_settings">Settings</string>
-
-    <string name="project_number">189266416861</string>
-    <string name="title_activity_intro2">Intro2Activity</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_write">WriteActivity</string>
-    <string name="title_activity_detail">DetailActivity</string>
 
     <!-- filter -->
     <string name="filter_age_n_count">%1$s, %2$s</string>
