글작성 activity 작업
공통변수 정리작업

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SsomClient</string>
+    <string name="app_name">Ssom</string>
     <string name="project_number">189266416861</string>
 
     <string name="title_section1">내 정보</string>
