--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,12 @@
     <string name="chat_list_title">Chat list (%1$d)</string>
     <string name="chat_room_title">Chat&#160;</string>
     <string name="chat_list_delete">대화 삭제</string>
+    <string name="chat_room_info_text_sent">상대방에게 만남을 신청했어요!</string>
+    <string name="chat_room_info_text_received">상대방이 만남을 신청했어요!</string>
+    <string name="chat_room_info_text_success">쏨과의 만남이 시작되었어요!</string>
+    <string name="chat_room_info_btn_sent">요청취소</string>
+    <string name="chat_room_info_btn_received">요청보기</string>
+    <string name="chat_room_info_btn_success">위치보기</string>
 
     <!-- button -->
     <string name="ok_upper">확인</string>
