--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,7 +83,7 @@
 
     <!-- dialog message -->
     <string name="dialog_notice">알림</string>
-    <string name="dialog_meet_request">만남 요청</string>
+    <string name="dialog_meet_request">만남요청</string>
     <string name="dialog_meet_cancel">만남취소</string>
     <string name="dialog_meet">만나요</string>
     <string name="dialog_sorry">미안해요</string>
@@ -92,6 +92,7 @@
     <string name="dialog_delete">삭제하기</string>
     <string name="dialog_write_delete_message">쏨 등록이 완료되지 않았어요.\n작성했던 내용을 삭제 하시겠어요?</string>
     <string name="dialog_meet_request_message">현재 대화상대에게\n만남을 요청 하시겠어요?</string>
+    <string name="dialog_meet_request_cancel_message">요청 취소 시에도 하트는 복구되지\n않습니다. 요청을 취소 하시겠어요?</string>
     <string name="dialog_meet_received_message">상대방이 만남을 요청했습니다!\n수락 하시겠어요?</string>
     <string name="dialog_meet_cancel_message">만남 취소 시 하트 1개가 소모됩니다.\n만남을 취소 하시겠어요?</string>
     <string name="dialog_chat_list_delete_message">대화 삭제 시 쏨이 종료됩니다.\n정말 삭제하시겠어요?</string>
