--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="title_tab_take">니가 쏴</string>
 
     <!-- post list item -->
-    <string name="post_title">%1$s %2$d명 있어요.</string>
+    <string name="post_title">%1$s, %2$d명 있어요.</string>
 
     <!-- detail view -->
     <string name="detail_cancel">닫기</string>
@@ -66,6 +66,7 @@
     <string name="chat_message_initial_first">두근두근,&#160;</string>
     <string name="chat_message_initial_second">대화가 시작 되었쏨 :)</string>
     <string name="chat_message_finish">상대방이 쏨을 종료했습니다. (T_T)</string>
+    <string name="chat_message_hint">메시지를 입력하세요...</string>
 
     <!-- button -->
     <string name="ok_upper">확인</string>
