--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <!-- chatting -->
     <string name="chat_list_title">Chat list (%1$d)</string>
     <string name="chat_room_title">Chat&#160;</string>
-    <string name="chat_list_delete">대화 삭제</string>
+    <string name="chat_list_delete">쏨 끝내기</string>
     <string name="chat_guide_start">대화 시작!</string>
     <string name="chat_room_info_text_sent">상대방에게 만남을 신청했어요!</string>
     <string name="chat_room_info_text_received">상대방이 만남을 신청했어요!</string>
@@ -99,13 +99,15 @@
     <string name="dialog_close">닫기</string>
     <string name="dialog_cancel">취소</string>
     <string name="dialog_delete">삭제하기</string>
+    <string name="dialog_finish">끝내기</string>
     <string name="dialog_require_login">로그인이 필요한 서비스입니다.\n로그인 하시겠어요?</string>
     <string name="dialog_write_delete_message">쏨 등록이 완료되지 않았어요.\n작성했던 내용을 삭제 하시겠어요?</string>
     <string name="dialog_meet_request_message">현재 대화상대에게\n만남을 요청 하시겠어요?</string>
     <string name="dialog_meet_request_cancel_message">요청 취소 시에도 하트는 복구되지\n않습니다. 요청을 취소 하시겠어요?</string>
     <string name="dialog_meet_received_message">상대방이 만남을 요청했습니다!\n수락 하시겠어요?</string>
     <string name="dialog_meet_cancel_message">만남 취소 시 하트 1개가 소모됩니다.\n만남을 취소 하시겠어요?</string>
-    <string name="dialog_chat_list_delete_message">대화 삭제 시 쏨이 종료됩니다.\n정말 삭제하시겠어요?</string>
+    <string name="dialog_chat_list_delete_message">끝낸 쏨은 되돌릴 수 없어요...\n쏨을 정말로 끝내시겠어요?</string>
+    <string name="dialog_logout_message">로그아웃 하시겠어요?</string>
 
     <!-- toggle bar -->
     <string name="map">MAP</string>
@@ -133,7 +135,7 @@
     <string name="login_find_password">비밀번호 찾기</string>
     <string name="login_top_logo">쏨 등록을 위해서는 로그인이 필요합니다 =)</string>
     <string name="login">로그인</string>
-    <string name="login_needed"><u>로그인하러 가기</u></string>
+    <string name="login_needed"><u>로그인</u></string>
     <string name="logout"><u>로그아웃</u></string>
 
     <!-- app 종료 -->
