--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,7 +114,8 @@
     <string name="dialog_meet_cancel_message">만남을 정말 취소 하시겠어요?\n취소 시 채팅방으로 돌아갑니다.</string>
     <string name="dialog_chat_list_delete_message">끝낸 쏨은 되돌릴 수 없어요...\n쏨을 정말로 끝내시겠어요?</string>
     <string name="dialog_logout_message">로그아웃 하시겠어요?</string>
-    <string name="dialog_explain_permission_message">위치에 접근할 권한이 없습니다. \n위치권한이 없는경우 정확한 위치서비스를 제공할 수 없습니다.\n\n[앱]->[권한]에서 위치 권한을 허용해주세요.</string>
+    <string name="dialog_explain_location_permission_message">위치에 접근할 권한이 없습니다. \n위치권한이 없는경우 정확한 위치서비스를 제공할 수 없습니다.\n\n[앱]->[권한]에서 위치 권한을 허용해주세요.</string>
+    <string name="dialog_explain_storage_permission_message">저장소에 접근할 권한이 없습니다. \n저장소 권한이 없는경우 게시물을 등록할 수 없습니다.\n\n[앱]->[권한]에서 저장소 권한을 허용해주세요.</string>
 
     <!-- toggle bar -->
     <string name="map">MAP</string>
@@ -122,8 +123,9 @@
 
     <!-- left menu -->
     <string name="noti_setting">알림 설정</string>
+    <string name="ssom_homepage">쏨 홈페이지</string>
     <string name="make_heart">하트 만들기</string>
-    <string name="private_information">개인 정보</string>
+    <string name="private_information">개인 정보 처리 방침</string>
     <string name="use_policy">이용 약관</string>
     <string name="question">문의 하기</string>
 
@@ -142,6 +144,7 @@
     <string name="login_find_password">비밀번호 찾기</string>
     <string name="login_top_logo">쏨 등록을 위해서는 로그인이 필요합니다 =)</string>
     <string name="login">로그인</string>
+    <string name="login_required"><u>로그인 후 이용할 수 있습니다.</u></string>
     <string name="login_needed"><u>로그인</u></string>
     <string name="logout"><u>로그아웃</u></string>
 
