--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <!-- button -->
     <string name="ok_upper">확인</string>
     <string name="cancel">취소</string>
+    <string name="save">저장</string>
 
     <!-- error message -->
     <string name="an_unexpected_error_occur">예상하지 못한 에러가 발생했습니다.</string>
@@ -129,6 +130,13 @@
     <string name="use_policy">이용 약관</string>
     <string name="question">문의 하기</string>
 
+    <!-- today profile -->
+    <string name="today_photo">오늘의 사진</string>
+    <string name="today_load_image">앨범 불러오기</string>
+    <string name="today_take_picture">바로 촬영하기</string>
+    <string name="today_delete_image">사진 삭제하기</string>
+    <string name="today_photo_will_be_delete_in_the_morning">\'오늘의 사진\'은 여러분의 프라이버시 보호를 위해\n매일 아침 9시에 <![CDATA[<b><font color=#ed344b>자동 삭제</b>]]> 됩니다.</string>
+
     <!-- login , logout -->
     <string name="login_reg_top_logo">쏨을 가입하고 새로운 만남을 시작해보세요 =)</string>
     <string name="login_reg_password_confirm">비밀번호 확인</string>
@@ -147,6 +155,11 @@
     <string name="login_required"><u>로그인 후 이용할 수 있습니다.</u></string>
     <string name="login_needed"><u>로그인</u></string>
     <string name="logout"><u>로그아웃</u></string>
+
+    <!-- version 관리 -->
+    <string name="update">업데이트</string>
+    <string name="finish">종료하기</string>
+    <string name="version_update_needed">새로운 업데이트가 있습니다.\n업데이트 후 이용하실 수 있습니다 =)</string>
 
     <!-- app 종료 -->
     <string name="app_finish">정말 종료하실 거에요? (T.T)</string>
