[login] 로그인 관련 동작 개선 - 로그인 화면 변경 - 페북 로그인 등록 - 로그인시에만 올사 등록으로 변경 - 이미지 업로드 네트워크 로직 불안정.. 개선요망 - 내 채팅이미지 배경이 검정 테두리로 보이게 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,7 +150,7 @@
     <string name="login_email_confirm"><u>이메일 인증</u></string>
     <string name="login_password">비밀번호</string>
     <string name="login_find_password">비밀번호 찾기</string>
-    <string name="login_top_logo">쏨 등록을 위해서는 로그인이 필요합니다 =)</string>
+    <string name="login_top_logo">서비스 이용을 위해서는 로그인이 필요합니다.</string>
     <string name="login">로그인</string>
     <string name="login_required"><u>로그인 후 이용할 수 있습니다.</u></string>
     <string name="login_needed"><u>로그인</u></string>
