--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,9 @@
     <string name="write_select_our_age">우리 나이는 %1$s에요</string>
     <string name="write_select_our_people">%1$s이 기다리고 있어요</string>
     <string name="write_one_letter">한마디</string>
-    <string name="write_content_hint">한 마디를 작성해보세요!\n센스 있는 메뉴선택, 멘트가\n뜨거운 쏨의 첫 걸음 입니다. : )</string>
+    <string name="write_content_hint_ssom">오늘은 내가 쏜다!\n쏘고 싶은 메뉴와 센스 있는 멘트를\n적어보세요. 좋은 쏨을 만날 확률이\n훨씬 높아 집니다. : )</string>
+    <string name="write_content_hint_ssoa">한턱 쏠 사람을 찾아보세요!\n사진, 멘트에 매력이 넘칠수록\n멋진 쏨을 만날 확률이 높아집니다!</string>
+    <string name="write_information">프라이버시를 위해 등록한 글은 아침 9시에 자동으로 삭제돼요!</string>
     <string name="write_apply">등록하기</string>
 
     <!-- post list menu -->
@@ -46,13 +48,16 @@
     <string name="title_tab_take">니가 쏴</string>
 
     <!-- post list item -->
-    <string name="post_title">%1$s, %2$d명 있어요.</string>
+    <string name="post_title">%1$s %2$d명 있어요</string>
 
     <!-- detail view -->
     <string name="detail_cancel">닫기</string>
     <string name="detail_apply">쏨 타기</string>
-    <string name="detail_age_people">%1$s, %2$d명 이에요.</string>
+    <string name="detail_age_people">%1$s, %2$d명 이에요</string>
     <string name="detail_distance">나와의 거리 %1$s</string>
+    <string name="detail_category_ssom">내가 쏠게요!</string>
+    <string name="detail_category_ssoa">쏘실 분 찾아요!</string>
+    <string name="detail_my_post_delete">쏨을 삭제하면, 이 쏨과 관련된\n모든 채팅도 함께 종료됩니다.\n정말 삭제하시겠어요?</string>
 
     <!-- chatting -->
     <string name="chat_list_title_empty">Chat list</string>
