[버그 수정] 트렐로 버그 수정 - 기본이미지 설정 - 채팅 관련 시스템 메시지 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="detail_distance">나와의 거리 %1$s</string>
     <string name="detail_category_ssom">내가 쏠게요!</string>
     <string name="detail_category_ssoa">쏘실 분 찾아요!</string>
-    <string name="detail_my_post_delete">쏨을 삭제하면, 이 쏨과 관련된\n모든 채팅도 함께 종료됩니다.\n정말 삭제하시겠어요?</string>
+    <string name="detail_my_post_delete">정말 삭제하시겠어요?</string>
 
     <!-- chatting -->
     <string name="chat_list_title_empty">Chat list</string>
@@ -75,6 +75,8 @@
     <string name="chat_message_initial_second">대화가 시작 되었쏨 :)</string>
     <string name="chat_message_request_received">만남 요청을 받았습니다!</string>
     <string name="chat_message_request_sent">만남 요청을 보냈습니다!</string>
+    <string name="chat_message_cancel_first">요청이 취소 되었어요.&#160;</string>
+    <string name="chat_message_cancel_second">다른 인연을 찾아보세요....</string>
     <string name="chat_message_approve">만남이 시작되었습니다.</string>
     <string name="chat_message_finish">상대방이 쏨을 종료했습니다. (T_T)</string>
     <string name="chat_message_hint">메시지를 입력하세요&#8230;</string>
