[결함] 트렐로 결함 수정 - 로그아웃 추가 - 메시지 수신 시 앱죽는 문제 수정 - 아웃 메시지 푸시 케이스 추가 - 목록에 없는 방 푸시 받으면 생성 추가 - 만남 중 쏨타기 못하게 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,7 @@
     <string name="invalid_email_format">사용이 불가능한 이메일 주소입니다.</string>
     <string name="login_failed">로그인에 실패하였습니다. 아이디 혹은 비밀번호를 확인해주세요.</string>
     <string name="success_registration">회원가입을 완료했습니다.</string>
+    <string name="ssom_progress_message">다른 만남 중이어서 쏨타기를 할 수 없어요.</string>
 
     <!-- dialog message -->
     <string name="dialog_notice">알림</string>
