--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,10 @@
     <string name="chat_room_no_info">정보가 없어요&#8230;</string>
     <string name="chat_ssom_map"><u>쏨 위치 보기</u></string>
 
+    <!--list empty-->
+    <string name="empty_chat_list">진행 중인 대화가 없어요&#8230;</string>
+    <string name="empty_ssom_list">아직 등록된 글이 없어요.\n당신이 먼저 쏨/쏴를 올려보세요!</string>
+
     <!-- button -->
     <string name="ok_upper">확인</string>
     <string name="cancel">취소</string>
