--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="filter_people_2">2명</string>
     <string name="filter_people_3">3명</string>
     <string name="filter_people_4_n_over">4명 이상</string>
+    <string name="filter_cannot_remove_all">모두 제외할 수 없습니다.</string>
     <string name="filter_btn_cancel">취소</string>
     <string name="filter_btn_apply">적용하기</string>
     <string name="filter_apply_complete">쏨 탐색기가 적용 되었습니다 =)</string>
@@ -134,7 +135,7 @@
     <string name="dialog_require_login">로그인이 필요한 서비스입니다.\n로그인 하시겠어요?</string>
     <string name="dialog_write_delete_message">쏨 등록이 완료되지 않았어요.\n작성했던 내용을 삭제 하시겠어요?</string>
     <string name="dialog_meet_request_message">현재 대화상대에게\n만남을 요청 하시겠어요?</string>
-    <string name="dialog_meet_request_cancel_message">요청 취소 시 상대방에게 알림이 갑니다.\n 요청을 취소 하시겠어요?</string>
+    <string name="dialog_meet_request_cancel_message">요청 취소 시 상대에게 알림이 가요.\n 요청을 취소 하시겠어요?</string>
     <string name="dialog_meet_received_message">상대방이 만남을 요청했습니다!\n수락 하시겠어요?</string>
     <string name="dialog_meet_cancel_message">만남을 정말 취소 하시겠어요?\n취소 시 채팅방으로 돌아갑니다.</string>
     <string name="dialog_meet_finish_message">만남을 종료 하시겠어요?</string>
@@ -195,6 +196,9 @@
     <string name="update">업데이트</string>
     <string name="finish">종료하기</string>
     <string name="version_update_needed">새로운 업데이트가 있습니다.\n업데이트 후 이용하실 수 있습니다 =)</string>
+
+    <!--user count-->
+    <string name="current_user_count">현재 %d명 접속 중</string>
 
     <!-- app 종료 -->
     <string name="app_finish">정말 종료하실 거에요? (T.T)</string>
